--- a/Edu.html
+++ b/Edu.html
@@ -16,12 +16,14 @@
         <img src="images/Logo.jpg" alt="">
         <div class="navigation">
             <ul>
+                <i id="menu-close" class="fas fa-times"></i>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Subjects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <img id="menu-btn" src="images/menu.jpg" alt="">
         </div>
     </nav>
 
