--- a/Edu.html
+++ b/Edu.html
@@ -7,6 +7,7 @@
     
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
     <nav>
         <img src="images/Logo.jpg" alt="">
         <div class="navigation">
-            <ul>
+            <ul class="active">
                 <i id="menu-close" class="fas fa-times"></i>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -338,6 +339,15 @@
         </div>
 
     </footer>
+
+    <script>
+        $('#menu-btn').click(function(){
+            $('nav .navigation ul').addClass('active')
+        });
+        $('#menu-close').click(function(){
+            $('nav .navigation ul').removeClass('active')
+        });
+    </script>
     
 </body>
 </html>
