Working on responsiveness

--- a/Edu.html
+++ b/Edu.html
@@ -18,11 +18,11 @@
         <div class="navigation">
             <ul class="active">
                 <i id="menu-close" class="fas fa-times"></i>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Subjects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="subjects.html">Subjects</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <img id="menu-btn" src="images/menu.jpg" alt="">
         </div>
