Working on About

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <!-- Home -->
+    <!-- About -->
 
     <section id="about-home">
         <h2>About Mpeko Senior Secondary School</h2>
@@ -46,14 +46,14 @@
                 <img src="images/fe1.png" alt="">
                 <div class="fe-text">
                     <h5>10+ Subjects</h5>
-                    <p>We offer a wide range of streams.</p>
+                    <p>We offer a wide range of streams from Science to Commerce.</p>
                 </div>
             </div>
             <div class="about-fe">
                 <img src="images/fe1.png" alt="">
                 <div class="fe-text">
-                    <h5>10+ Subjects</h5>
-                    <p>We offer a wide range of streams.</p>
+                    <h5>From Grade 8 to Grade 12</h5>
+                    <p>Our classes start from Grade 8 up until Grade 12</p>
                 </div>
             </div>
         </div>
@@ -90,6 +90,18 @@
                    and has played to full houses.
                 </p>
             </div>
+        </div>
+    </section>
+
+    <section id="trust">
+        <h1>Trusted By</h1>
+        <p></p>
+        <div class="trust-img">
+            <img src="images/trust1.jpg" alt="">
+            <img src="images/trust1.jpg" alt="">
+            <img src="images/trust1.jpg" alt="">
+            <img src="images/trust1.jpg" alt="">
+            <img src="images/trust1.jpg" alt="">
         </div>
     </section>
 
